...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:hint="@string/searchNameHint"
...
                android:textAlignment="center"
                android:textOff="@string/sun"
                android:textOn="@string/sun"
                android:textSize="12sp" />

            <ToggleButton
                android:id="@+id/mondayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textOff="@string/mon"
                android:textOn="@string/mon"
                android:textSize="10sp" />

            <ToggleButton
                android:id="@+id/tuesdayToggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textSize="12sp"
...
                android:text="@string/sat"
                android:textOff="@string/sat"
                android:textOn="@string/sat" />
        </LinearLayout>

        <EditText
            android:id="@+id/commentText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:ems="10"
            android:maxLength="30"
            android:hint="@string/habitComment"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/createButton" />

        <Button
...
