...
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/habitsTab" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/historyTab" />

            <Button
                android:id="@+id/socialButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/socialTab" />

        </LinearLayout>

        <ListView
            android:id="@+id/habitsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
...
