<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="h4bit.h4bit.Views.ViewProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/habitsButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/habitsTab" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/historyTab" />

            <Button
                android:id="@+id/socialButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/socialTab" />

        </LinearLayout>

        <ListView
            android:id="@+id/eventsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" >

        </ListView>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <AutoCompleteTextView
            android:id="@+id/AutoCompleteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="Enter Habit"
            android:hint="Enter Habit" />

        <AutoCompleteTextView
            android:id="@+id/AutoCompleteComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Comment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButton"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/searchHistoryButton" />

            <Button
                android:id="@+id/mapButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/map" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>