...
                android:layout_weight="2"
                android:text="Follow Requests" />

        </LinearLayout>

        <ListView
            android:id="@+id/habitStatusList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

        </ListView>

...
